--- a/blogpost.html
+++ b/blogpost.html
@@ -15,10 +15,11 @@
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
                 <p> Los blogs son la mejor forma de compartir tus ideas e información </p>
+                <p><img src="https://imgur.com/gallery/jh0c8C4" alt="Logo GitHub"></p>
                 <p> Arreglando la rama fix-typo</p>
                 <p>Suscribete y dale like</p>
 
             </div>
         </div>               
     </body>
-</html>
+
